create simple echo bot

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "bot-py": "nodemon exec python ./python-bot/bot.py"
+    "bot-py": "nodemon --exec python ./python-bot/bot.py"
   },
   "repository": {
     "type": "git",
